Page MenuHome GnuPG

gpgme does not handle backslashes in file names correctly.
Closed, ResolvedPublic

Description

In particular UNC (\\SERVER\FILE) style names are problematic in 1.23. As soon as direct passing of filenames to gpg is enabled, the extra quoting done in w32-io.c and gpgme-w32spawn.c is misbehaving. Probably due to the double quotes usage in UNC.

Instead of fixing these nasty double-backslash things and risking other breaks of quoting (again), we should pass forward slashes to gpg. This is well defined for Windows just a bit uncommon for Windows-only users.

See also rM0221d7f28a315d305409cf2dcae853c22ad94d31 and T6833

Event Timeline

werner triaged this task as Normal priority.Jun 4 2024, 2:37 PM
werner created this task.
ikloecker changed the task status from Open to Testing.Jun 7 2024, 3:18 PM
ikloecker moved this task from Restricted Project Column to Restricted Project Column on the Restricted Project board.
ikloecker added a project: vsd33.

Adding vsd33 for testing with next VSD

werner mentioned this in Unknown Object (Maniphest Task).Aug 28 2024, 11:51 AM
ebo moved this task from Restricted Project Column to Restricted Project Column on the Restricted Project board.
ebo moved this task from Backlog to QA for next release on the gpgme board.
ebo moved this task from WiP to vsd-3.3.0 on the vsd33 board.
ebo edited projects, added vsd33 (vsd-3.3.0); removed vsd33.